--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
@@ -19,5 +20,14 @@
 			<attribute name="owner.project.facets" value="jst.web.jstl"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="D:/Tools/slf4j-1.5.8/slf4j-api-1.5.8.jar"/>
+	<classpathentry kind="lib" path="D:/Tools/slf4j-1.5.8/slf4j-log4j12-1.5.8.jar"/>
+	<classpathentry kind="lib" path="D:/Tools/slf4j-1.5.8/log4j-over-slf4j-1.5.8.jar"/>
+	<classpathentry kind="lib" path="D:/Tools/httpcomponents-client-4.2.5/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="D:/Tools/httpcomponents-client-4.2.5/commons-httpclient-3.0.1.jar"/>
+	<classpathentry kind="lib" path="D:/Tools/httpcomponents-client-4.2.5/commons-io-1.2.jar"/>
+	<classpathentry kind="lib" path="D:/Tools/httpcomponents-client-4.2.5/commons-logging-1.0.4.jar"/>
+	<classpathentry kind="lib" path="D:/Tools/google-gson-2.2.4/gson-2.2.4.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
