--- a/.classpath
+++ b/.classpath
@@ -28,6 +28,11 @@
 	<classpathentry kind="lib" path="D:/Tools/httpcomponents-client-4.2.5/commons-io-1.2.jar"/>
 	<classpathentry kind="lib" path="D:/Tools/httpcomponents-client-4.2.5/commons-logging-1.0.4.jar"/>
 	<classpathentry kind="lib" path="D:/Tools/google-gson-2.2.4/gson-2.2.4.jar"/>
+	<classpathentry kind="lib" path="D:/Tools/commons-fileupload-1.3/lib/commons-fileupload-1.3.jar" sourcepath="D:/Tools/commons-fileupload-1.3/lib/commons-fileupload-1.3-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/D:/Tools/commons-fileupload-1.3/lib/commons-fileupload-1.3-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
