--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -18,5 +18,26 @@
     <servlet-name>CommitService</servlet-name>
     <url-pattern>/CommitService</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>TestService</servlet-name>
+    <servlet-class>com.gs.service.TestService</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>TestService</servlet-name>
+    <url-pattern>/TestService</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>MessageService</servlet-name>
+    <servlet-class>com.gs.service.MessageService</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>MessageService</servlet-name>
+    <url-pattern>/MessageService</url-pattern>
+  </servlet-mapping>
+  
  </web-app>
  
